=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

all changes without author attribution are by Doug MacEachern

=over 3

=item 1.24_01-dev

skip modules/ssi test if mod_include is not installed

Apache::test enhancements
[Ken Williams <ken@forum.swarthmore.edu>]

fix Apache::exit() so it does it does not trigger a warning

change Apache::PerlRun's Apache class relationship from is-a to has-a
[Ken Williams <ken@forum.swarthmore.edu>]

Apache::SubRequest->run(1) allows ap_send_http_headers() to output for
subrequests

Apache::{Registry,PerlRun} will now log an error if $filename is NOT_FOUND
thanks to Martin Wood for the spot

fix bug where Apache::send_http_header was resetting r->status = 200
thanks to brian d foy for the spot

make extra sure Apache::Constants::AUTOLOAD does not recurse looking
for sub __AUTOLOAD [Jim Winstead <jimw@trainedmonkey.com>]

fix %Apache::ReadConfig:: processing for PerlRequire'd files
[Salvador Ortiz Garcia <sog@msg.com.mx>]

$r->get_basic_auth_pw and $r->note_basic_auth_failure will default
$r->auth_type to "Basic" if not already set

$r->auth_type is now writeable, e.g. $r->auth_type("Basic")

fix $r->read() so it will not block if all data has already been read
and so that Apache will not hang during ap_discard_request_body() on
error or redirect after all data has been read

fix for Makefile.PL ADD_MODULE=src/module/foo/libfoo.a
[Nelson Oliveira <NOliveira@extend.com>]

added Apache::user method in preparation for 2.0, now that `user' hangs
off of the request_rec rather than request_rec->connection in Apache 2.0

disable r->proxyreq checking unless PerlTransHandler is enabled and
configured

fix 'make tar_Apache' [Jesse Erlbaum <jesse@VM.COM>]

fix for Perl{Module,Require} in .htaccess,
thanks to Will Trillich and Andrew Gideon for the spot

static+apaci fixes for aix [Jens-Uwe Mager <jum@helios.de>]

fix bug in Perl{Set,Add}Var so $r->dir_config->get('key') sees the