@@ -9,8 +9,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
   and make it more clear that Apache::Status should not be used in a
   production environment, as it adds quite a bit of bloat
 
-- changes for libapreq+win32 [Jiho Hahm <jhahm@zing.com>]
-
 - segfaults with DBI->connect (mysql), reported that downgrade to
   1.21_03 cures
 
